k3s/infra/controllers/argocd/99-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.vextech.dev`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: no-auth
          namespace: route
  tls: {}
